test_src/compiler_errors/types/binary/RightShiftBoolError1.b
class RightShiftBoolError1 {
    void test() {
        println(true >> 1);
    }
}
